# common-marmo-set

./: README.md  run_lint.sh
cmake-ing/: README.md
cmake-ing/basics/: README.md
cmake-ing/basics/01/: README.md
cmake-ing/basics/02/: README.md
cmake-ing/basics/02/src/: CMakeLists.txt  main.cc
cmake-ing/basics/03/src/: CMakeLists.txt  main.cc
learningc/: CMakeLists.txt  README.md
learningc/src/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  7.c  8.c  9.c  argv.c  array.c  bitwise.c  funfunc.c  index.c  macro.c  malloc.c  pointer.c  print.c  rand.c  ssdl.c  struct.c  sttrr.c  types.c  usefoo.c
learningc/src/fooheader/: foo.h
learningc/src/fooutil/: foo.c
learningcpp/: CMakeLists.txt
learningcpp/src/: Cat.cc  Cat.h  CatMain.cc  SimpleClassBar.cc  SimpleClassBar.h  cout.cc  simpleclass.cc  simplefunction.cc  somefloat.cc  sometypes.cc
sdl/: CMakeLists.txt
sdl/src/: hello.c
